--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "npm-check",
-  "version": "6.0.1",
+  "name": "npm-checky",
+  "version": "1.0.4",
   "description": "Check for outdated, incorrect, and unused dependencies.",
   "main": "lib",
   "engines": {
-    "node": ">=v18.13.0"
+    "node": ">=10.9.0"
   },
   "types": "./index.d.ts",
   "typings": "./index.d.ts",
@@ -65,36 +65,36 @@
     "lib-es5"
   ],
   "dependencies": {
-    "callsite-record": "^4.1.5",
-    "chalk": "^5.2.0",
+    "callsite-record": "^4.1.3",
+    "chalk": "^4.1.0",
     "co": "^4.6.0",
-    "depcheck": "^1.4.3",
-    "execa": "^6.1.0",
-    "giturl": "^1.0.1",
+    "depcheck": "^1.3.1",
+    "execa": "^5.0.0",
+    "giturl": "^1.0.0",
     "global-modules": "^2.0.0",
-    "globby": "^13.1.3",
-    "inquirer": "^9.1.4",
-    "is-ci": "^3.0.1",
-    "lodash": "^4.17.21",
-    "meow": "^11.0.0",
-    "minimatch": "^6.1.6",
-    "node-emoji": "^1.11.0",
-    "ora": "^6.1.2",
-    "package-json": "^8.1.0",
-    "path-exists": "^5.0.0",
-    "pkg-dir": "^7.0.0",
+    "globby": "^11.0.2",
+    "inquirer": "^7.3.3",
+    "is-ci": "^2.0.0",
+    "lodash": "^4.17.20",
+    "meow": "^9.0.0",
+    "minimatch": "^3.0.2",
+    "node-emoji": "^1.10.0",
+    "ora": "^5.3.0",
+    "package-json": "^6.5.0",
+    "path-exists": "^4.0.0",
+    "pkg-dir": "^5.0.0",
     "preferred-pm": "^3.0.3",
-    "rc-config-loader": "^4.1.2",
-    "semver": "^7.3.8",
-    "semver-diff": "^4.0.0",
-    "strip-ansi": "^7.0.1",
+    "rc-config-loader": "^4.0.0",
+    "semver": "^7.3.4",
+    "semver-diff": "^3.1.1",
+    "strip-ansi": "^6.0.0",
     "text-table": "^0.2.0",
-    "throat": "^6.0.2",
-    "update-notifier": "^6.0.2",
+    "throat": "^6.0.1",
+    "update-notifier": "^5.1.0",
     "xtend": "^4.0.2"
   },
   "devDependencies": {
-    "babel-runtime": "^6.26.0",
+    "babel-runtime": "^6.6.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
